--- a/config/_default/menus.ja.toml
+++ b/config/_default/menus.ja.toml
@@ -10,20 +10,34 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
-[[main]]
-  name = "Blog"
-  pageRef = "posts"
-  weight = 10
+#[[main]]
+#  name = "Diary"
+#  pageRef = "posts"
+#  weight = 10
 
 [[main]]
-  name = "Categories"
-  pageRef = "categories"
+  name = "X/Twitter"
+  url = "https://x.com/98tml"
   weight = 20
+  [main.params]
+    icon = "x-twitter"
+    showName = false
+    target = "_blank"
 
 [[main]]
-  name = "Tags"
-  pageRef = "tags"
-  weight = 30
+  name = "Contact"
+  url = "https://t98.info/contact/"
+  weight = 21
+  [main.params]
+    icon = "envelope-solid"
+    showName = false
+    target = "_blank"
+
+[[main]]
+  identifier = "appearance"
+  weight = 98
+  [main.params]
+    action = "appearance"
 
 [[main]]
   identifier = "search"
@@ -31,17 +45,22 @@
   [main.params]
     action = "search"
 
-[[main]]
-  identifier = "locale"
-  weight = 100
-  [main.params]
-    action = "locale"
+#[[main]]
+#  identifier = "locale"
+#  weight = 100
+#  [main.params]
+#    action = "locale"
 
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
 # the copyright notice. Configure as per the main menu above.
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 10
+
+[[footer]]
+  name = "Categories"
+  pageRef = "categories"
+  weight = 20
