Title: Update website titles
- Changed the title in the Japanese language configuration to "Diary"
- Changed the titles in various HTML files to "Diary"
- Updated the title in the RSS feed for the "diary" category
- Updated the title in the RSS feed for the "categories" index
- Updated the title in the main HTML file to "Diary"

--- a/config/_default/languages.ja.toml
+++ b/config/_default/languages.ja.toml
@@ -3,7 +3,7 @@ languageName = "Japanese"
 languageDirection = "ltr"
 weight = 1
 
-title = "diary.t98.info"
+title = "Diary"
 
 #copyright = "&copy;{ year } ほむりんルーム"
 
